<resources>
    <string name="app_name">Weather Application</string>
    <string name="precipitation">Precipitation</string>
    <string name="humidity">Real Feel Temp</string>
    <string name="wind_flow">Wind flow</string>
    <string name="rft">%.1f</string>
    <string name="wind">%.1f</string>
    <string name="prec">%.1f</string>
    <string name="st_petersburg_russia">St. Petersburg, Russia</string>
    <string name="format">%.1f°C</string>
    <string name="weather">Weather</string>
    <string name="_25_c">25°C</string>
    <string name="temp">temp</string>
</resources>
