<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:id="@+id/fullLayout"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2">

        <TextView
            android:id="@+id/WeatherText"
            android:layout_width="139dp"
            android:layout_height="59dp"
            android:text="@string/weather"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/st_petersburg_russia"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="150dp"
            android:layout_height="79dp"
            android:text=""
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wicon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precipitation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_flow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/rft"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:text="@string/rft"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prec"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:text="@string/prec"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:text="@string/wind"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/fog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/rft" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/cloud"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/prec" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/wind2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wind" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday"
            app:layout_constraintBottom_toTopOf="@+id/i5"
            app:layout_constraintEnd_toEndOf="@+id/i5"
            app:layout_constraintStart_toStartOf="@+id/i5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sunday"
            app:layout_constraintBottom_toTopOf="@+id/i2"
            app:layout_constraintEnd_toEndOf="@+id/i2"
            app:layout_constraintStart_toStartOf="@+id/i2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monday"
            app:layout_constraintBottom_toTopOf="@+id/i3"
            app:layout_constraintEnd_toEndOf="@+id/i3"
            app:layout_constraintStart_toStartOf="@+id/i3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blizzard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/i5"
            app:layout_constraintStart_toStartOf="@+id/i5"
            app:layout_constraintTop_toBottomOf="@+id/i5" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="58dp"
            android:layout_height="19dp"
            android:text="Windy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/i2"
            app:layout_constraintStart_toStartOf="@+id/i2"
            app:layout_constraintTop_toBottomOf="@+id/i2" />

        <TextView
            android:id="@+id/Rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/i3"
            app:layout_constraintStart_toStartOf="@+id/i3"
            app:layout_constraintTop_toBottomOf="@+id/i3" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thunderstorm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/i4"
            app:layout_constraintStart_toStartOf="@+id/i4"
            app:layout_constraintTop_toBottomOf="@+id/i4" />

        <ImageView
            android:id="@+id/i5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/blizzard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/i4"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/i2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/wind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/i3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/i3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/rain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/i4"
            app:layout_constraintStart_toEndOf="@+id/i2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/i4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/thunder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/i5"
            app:layout_constraintStart_toEndOf="@+id/i3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Tuesday"
            app:layout_constraintBottom_toTopOf="@+id/i4"
            app:layout_constraintEnd_toEndOf="@+id/i4"
            app:layout_constraintStart_toStartOf="@+id/i4"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>